# wyoming_openai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  __init__.py  __main__.py  compatibility.py  docker-compose.chatterbox.yml  docker-compose.dev.yml  docker-compose.fastapi-kokoro.yml  docker-compose.groq.yml  docker-compose.kokoro-fastapi.yml  docker-compose.localai.yml  docker-compose.openai-edge-tts.yml  docker-compose.orpheus-fastapi.yml  docker-compose.speaches.yml  docker-compose.voxtral.yml  docker-compose.yml  handler.py  pyproject.toml  requirements.in  requirements.txt  utilities.py
.agents/skills/bump-version/: SKILL.md
.claude/skills/bump-version/: SKILL.md
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: docker-image-pr.yml  docker-image.yml  lint.yml  pr-cleanup.yml  publish-to-pypi.yml  test.yml
src/wyoming_openai/: __init__.py  __main__.py  compatibility.py  const.py  handler.py  utilities.py
tests/: test_compatibility.py  test_const.py  test_duplicate_audio_fix.py  test_handler.py  test_init.py  test_integration.py  test_utilities.py
