[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wyoming_openai"
version = "0.3.0"
description = "OpenAI-Compatible Proxy Middleware for the Wyoming Protocol"
authors = [
    { name = "Rory Eckel" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "openai==1.61.1",
    "wyoming==1.6.0"
]

[project.urls]
Homepage = "https://github.com/roryeckel/wyoming_openai"
Issues = "https://github.com/roryeckel/wyoming_openai/issues"

[project.optional-dependencies]
dev = [
    "ruff==0.11.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Enable Pyflakes (`F`), isort (`I`), and other recommended rules
lint.select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "T20", "RET"]
lint.ignore = []

line-length = 200
indent-width = 4

# Assume Python 3.12
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".github",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "dist",
    "build",
]

[tool.ruff.lint.isort]
known-first-party = ["wyoming_openai"]
